--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://i.imgur.com/eR9JyUR_d.webp?maxwidth=1520&fidelity=grand" />
+    <img
+      src="https://ichef.bbci.co.uk/news/976/cpsprodpb/16620/production/_91408619_55df76d5-2245-41c1-8031-07a4da3f313f.jpg.webp"
+      alt="the frog meme"
+    />
+    <img
+      src="https://www.thenews.com.pk/assets/uploads/updates/2023-06-24/1084221_5137938_dogg_updates.jpg"
+      alt="snoop dogg in shades"
+      title="I see you Snoop[ing]"
+    />
   </body>
 </html>
